# mle_workshop

./: Dockerfile_api  Dockerfile_mlflow  Dockerfile_train  Makefile  README.md
api/: api.py  pyproject.toml
k8s/: api.yaml  minio.yaml  mlflow.yaml  train.yaml
train/: pyproject.toml  train.py
